<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_shadow"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/dialog_careful_title"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:text="@string/dialog_hint_content"
            android:textColor="@color/black"
            android:textSize="16dp" />
        <CheckBox
            android:id="@+id/test_user"
            android:theme="@style/MyCheckBox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:checked="false"
            android:padding="5dp" />

    </LinearLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/button_ok" />

</LinearLayout>
