<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:orientation="vertical">

    <include layout="@layout/main_activity_toolbar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="10dp"
                android:text="@string/user_name"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTelBackground"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:id="@+id/ic_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_username" />

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/ic_username"
                    android:background="@color/colorTelBackground"
                    android:inputType="textNoSuggestions"
                    android:cursorVisible="true"
                    android:hint="@string/hint_user_name"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/clearUserName"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_del_grey" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvContactNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="10dp"
                android:text="@string/contact_number"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTelBackground"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:id="@+id/ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/editTelNum"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/ic_phone"
                    android:background="@color/colorTelBackground"
                    android:cursorVisible="true"
                    android:hint="@string/hint_telnum"
                    android:inputType="phone"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/clearPhoneNum"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_del_grey" />

            </RelativeLayout>


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTelBackground"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:id="@+id/ic_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/ic_email"
                    android:background="@color/colorTelBackground"
                    android:cursorVisible="true"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/clearemail"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_del_grey" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:paddingLeft="10dp"
                android:text="@string/address"
                android:textColor="@color/colorMainText"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTelBackground"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <ImageView
                    android:id="@+id/ic_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingLeft="8dp"
                    android:src="@drawable/ic_address" />

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/ic_address"
                    android:background="@color/colorTelBackground"
                    android:cursorVisible="true"
                    android:hint="@string/hint_address"
                    android:inputType="textPostalAddress"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/clearAddress"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_del_grey" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/button_ok"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/dialog_cancel"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
