<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/main_activity_toolbar_title" />

        <RelativeLayout
            android:id="@+id/setup_wizard_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/user_experience_hide_height" />

            <ImageView
                android:id="@+id/icon"
                android:layout_width="@dimen/user_experience_icon_width"
                android:layout_height="@dimen/user_experience_icon_height"
                android:layout_below="@+id/view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/user_experience_icon_margin_top"
                android:src="@mipmap/ic_info_user_experience_center" />

            <TextView
                android:id="@+id/tv_content_title"
                android:layout_width="@dimen/user_experience_title_width"
                android:layout_height="wrap_content"
                android:layout_below="@+id/icon"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/user_experience_margin_left_and_right"
                android:layout_marginTop="@dimen/user_experience_title_margin_top"
                android:gravity="center_horizontal"
                android:text="@string/user_experience_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/user_experience_title_text_size" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_content_title"
                android:layout_marginLeft="@dimen/user_experience_margin_left_and_right"
                android:layout_marginRight="@dimen/user_experience_margin_left_and_right"
                android:layout_marginTop="@dimen/user_experience_content_margin_top"
                android:text="@string/user_experience_description"
                android:textSize="@dimen/user_experience_content_text_size" />

            <RelativeLayout
                android:id="@+id/switch_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_content"
                android:layout_marginBottom="@dimen/user_experience_switch_bar_margin_bottom"
                android:layout_marginStart="@dimen/user_experience_margin_left_and_right"
                android:layout_marginTop="@dimen/user_experience_switch_bar_margin_top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/switch_text_join"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:text="@string/user_experience_Join"
                    android:textSize="@dimen/user_experience_content_text_size" />

                <TextView
                    android:id="@+id/switch_text_user_experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/switch_text_join"
                    android:layout_toStartOf="@+id/user_switch"
                    android:text="@string/user_experience_text"
                    android:textColor="@color/theme_color"
                    android:textSize="@dimen/user_experience_content_text_size" />

                <Switch
                    android:id="@+id/user_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/user_experience_margin_left_and_right"
                    android:clickable="true"
                    android:theme="@style/SCBSwitch"
                    android:visibility="invisible"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_alignParentBottom="true"
                >

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_weight="1"
                    android:text="@string/dialog_cancel" />
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"></ImageView>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="40dp"
                    android:text="@string/button_ok" />

            </LinearLayout>

        </RelativeLayout>




    </LinearLayout>

</ScrollView>